@@ -1,6 +1,7 @@
 Changes for 2.1.0
 
 New features:
+....I...S. [ZBXNEXT-1472] added support of parallel processing of time-based functions (Sasha)
 ..F....... [ZBXNEXT-1323] implemented macros in script confirmation text (Eduard)
 .......PS. [ZBX-3449] added support of multiple dynamic SNMP indexes (Sasha)
 ..F....... [ZBXNEXT-1441] added media type name to action operations description (Vedmak)
